# RIINOX

./: .pre-commit-config.yaml  README.md  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
.envs/.local/: .django  .postgres
compose/local/django/: Dockerfile
compose/production/django/: Dockerfile
compose/production/traefik/: traefik.yml
config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
core/: conftest.py
core/applications/invoice/: apps.py  models.py
core/applications/notification/: apps.py  models.py
core/applications/payment/: apps.py
core/applications/report/: apps.py  models.py
core/applications/users/: adapters.py  apps.py  models.py  views.py
core/applications/users/api/: serializers.py  views.py
core/applications/users/migrations/: 0001_initial.py
core/applications/users/tests/: factories.py  test_admin.py  test_forms.py  test_managers.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
core/applications/users/tests/api/: test_urls.py  test_views.py
core/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
core/helper/: enums.py  models.py
core/templates/: base.html
docs/: conf.py  index.rst  make.bat  users.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
